--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -35,6 +35,7 @@ VERSION HISTORY:
 + Issue #1766: Adding an option for attached units to use the faction camo
 + Issue #1781: Adding Sorting to the Scenario Table
 + Issue #1738: Scenario Resolution Wizard: Add View Personnel button to Pilot Status
++ Issue #1718: Refit configuration change does not look for multiple qualities in warehouse
 
 0.47.6 (2020-5-03 1715 UTC)
 + PR #1610: Raised cost of edge points from 1 to 10 for the AtB configuration preset.
