--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,6 @@
 VERSION HISTORY:
 ----------------
-0.47.7-SNAPSHOT
+0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
 + PR #1810: use grid layout for repair tab main panels
 + PR #1802: Updates to special abilities in all presets
