--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -2,6 +2,7 @@ VERSION HISTORY:
 ----------------
 0.47.8-SNAPSHOT
 + PR #1825: Adding Advance to Next Monday to the AdvanceDaysDialog
++ Issue #1828: Rolling over to the next month when using AtB and your current faction goes extinct will no longer cause an error
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
