--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,8 @@ VERSION HISTORY:
 0.47.8-SNAPSHOT
 + PR #1825: Adding Advance to Next Monday to the AdvanceDaysDialog
 + Issue #1828: Rolling over to the next month when using AtB and your current faction goes extinct will no longer cause an error
++ Issue #1827: Adding documentation comment for required Excel version for Awards Tracker
++ Issue #1819: Fixing Time in Rank without Time in Service
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
