--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -15,6 +15,7 @@ VERSION HISTORY:
 + Issue #1861: tryingToMarry and tryingToConceive flags are now saved properly
 + PR #1863: Retirement Date Tracking
 + PR #1864: Random Callsign Generator
++ Issue #1871: Implementing sorting fixes for the personnel tab
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
