--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -17,6 +17,8 @@ VERSION HISTORY:
 + PR #1864: Random Callsign Generator
 + Issue #1871: Implementing sorting fixes for the personnel tab
 + PR #1850: Phenotype Rework Implementing Vehicle, ProtoMech, and Naval Phenotypes
++ PR #1669: Implementing the MegaMek Unit Selector in MekHQ
++ PR #1857: Personnel biographical view and last name simplification
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
