--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -18,6 +18,7 @@ VERSION HISTORY:
 + Issue #1871: Implementing sorting fixes for the personnel tab
 + PR #1850: Phenotype Rework Implementing Vehicle, ProtoMech, and Naval Phenotypes
 + PR #1669: Implementing the MegaMek Unit Selector in MekHQ
++ Issue #198: Adding Ransom Mech and Ransom Prisoner Options for Scenario Resolution
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
