--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ VERSION HISTORY:
 + PR #1850: Phenotype Rework Implementing Vehicle, ProtoMech, and Naval Phenotypes
 + PR #1669: Implementing the MegaMek Unit Selector in MekHQ
 + Issue #198: Adding Ransom Mech and Ransom Prisoner Options for Scenario Resolution
+ + Issue #1881: Outer planets in Weldry system can now be clicked
 
 0.47.7 (2020-06-22 2330 UTC)
 + PR #1811: Fix advance multiple days reports not showing
