--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,6 +1,7 @@
 VERSION HISTORY:
 ----------------
 0.47.9-SNAPSHOT
++ Issue #1894: Adding additional legacy date format
 
 0.47.8 (2020-08-02 2300 UTC)
 + PR #1825: Adding Advance to Next Monday to the AdvanceDaysDialog
