--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -4,6 +4,7 @@ VERSION HISTORY:
 + Issue #1894: Adding additional legacy date format
 + PR #1897: Genealogy: Adding a contains map check
 + PR #1900: Adding Battle Damage to MekHQ Sprites
++ Issue #1902: Fixing DateChooser NPEs
 
 0.47.8 (2020-08-02 2300 UTC)
 + PR #1825: Adding Advance to Next Monday to the AdvanceDaysDialog
