--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+0.47.10-SNAPSHOT
+
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
 + PR #1897: Genealogy: Adding a contains map check
