--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -6,6 +6,7 @@ VERSION HISTORY:
 + Data: Numerous fixes to RATS, Mechfiles, Sprites, and update Unit Roles.
 + PR #1893: Personnel Status: Fixing ChangeStatus, Standardizing Boolean Comparisons, and Implementing Death Options
 + Issue #1808: Adding an Option for the Player to Control All Attached Units
++ Issue #399: AtB campaigns display current parts availability at the bottom; more detailed "this part is not available to your unit" explanations
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
