--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -8,6 +8,7 @@ VERSION HISTORY:
 + Issue #1808: Adding an Option for the Player to Control All Attached Units
 + Issue #399: AtB campaigns display current parts availability at the bottom; more detailed "this part is not available to your unit" explanations
 + Issue #1915: Fixing Date Lineup
++ PR #1917: Fixing the Award Tracker post-Ancestors Removal
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
