--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -10,6 +10,7 @@ VERSION HISTORY:
 + Issue #1915: Fixing Date Lineup
 + PR #1917: Fixing the Award Tracker post-Ancestors Removal
 + Issue #1920: Fixing xml load for bad Ancestry data
++ PR #1916: Personnel Filter Enum
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
