--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -12,6 +12,7 @@ VERSION HISTORY:
 + Issue #1920: Fixing xml load for bad Ancestry data
 + PR #1916: Personnel Filter Enum
 + Issue #790: Implementing Non-Combat TO&E Forces
++ PR #1930: Fixing Fill Transports NPE
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
