--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -13,6 +13,7 @@ VERSION HISTORY:
 + PR #1916: Personnel Filter Enum
 + Issue #790: Implementing Non-Combat TO&E Forces
 + PR #1930: Fixing Fill Transports NPE
++ Issue #1829: Fixing Duplicated Nags in AdvanceDaysDialog
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
