--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -14,6 +14,8 @@ VERSION HISTORY:
 + Issue #790: Implementing Non-Combat TO&E Forces
 + PR #1930: Fixing Fill Transports NPE
 + Issue #1829: Fixing Duplicated Nags in AdvanceDaysDialog
++ Issue #470: Mass Training: Rank, No Officer, and Only Officer Filters
++ Issue #1929: Scenario Resolution: Fixing Display Anchor Issues
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
