--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -17,6 +17,7 @@ VERSION HISTORY:
 + Issue #470: Mass Training: Rank, No Officer, and Only Officer Filters
 + Issue #1929: Scenario Resolution: Fixing Display Anchor Issues
 + PR #1932: Fixing Total Earnings Display Issues
++ Issue #1941: Person View Panel Ability and Injury Description ToolTip
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
