--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -24,6 +24,7 @@ VERSION HISTORY:
 + Issue #1661: Implementing Basic Russian Patronymics
 + Issue #1817: Implementing option to not save customs to XML
 + PR #1949: Fixing Genealogy Removal
++ Issue #1962: Grant kill credit to units from the player's campaign given to other players for the duration of a megamek scenario
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
