--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -27,6 +27,7 @@ VERSION HISTORY:
 + Issue #1962: Grant kill credit to units from the player's campaign given to other players for the duration of a megamek scenario
 + Issue #1264: Allow faction capitals to change on a specific date, not just year
 + PR #1966: Fixing Duplicated Siblings
++ PR #1925: Final PR to swap MekHQ to use LocalDate
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
