--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -35,6 +35,8 @@ VERSION HISTORY:
 + Issue #259: Implementing Customizable MekHQ Display Date Formats
 + Issue #1982: Fixing AtBBattleChance for unassigned lances
 + Issue #1984: Implementing useManualMarriages Option
++ Issue #1983: Switching to new form of UUID save format
++ Issue #1952: Personnel Market Updates No Longer Fail in Rare Cases During Person Creation
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
