--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -47,6 +47,7 @@ VERSION HISTORY:
 + PR #2009: Moving the Misc Tab to MekHQOptions, Fixing UnitMarketReportRefresh, Properly Localizing lblOpforLocalForceLikelihood
 + Issue #2001: Fixing Lance Display Ordinal Comparison
 + PR #2013: Adding MekHQ option to prefer GZIP in campaign saves
++ Issue #1866: Implementing New Day MRMS Option
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
