--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -48,6 +48,7 @@ VERSION HISTORY:
 + Issue #2001: Fixing Lance Display Ordinal Comparison
 + PR #2013: Adding MekHQ option to prefer GZIP in campaign saves
 + Issue #1866: Implementing New Day MRMS Option
++ Issue #630: Improved tracking of integrated heat sink changes during refit
 
 0.47.9 (2020-08-07 1830 UTC)
 + Issue #1894: Adding additional legacy date format
