--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -6,6 +6,9 @@ VERSION HISTORY:
 + PR #2023: Moving StartGameDelay to MekHQOptions
 + Issue #2036: OmniVehicle config changes require omnipod heat sinks
 + Issue #2039: Subcontract Check NPE
++ Issue #1892: Launch Game Dialog Standardization
++ PR #2022: GM Tools Name and Callsign Generation
++ PR #2046: Fixing duplicated MekHQUnitSelectorDialog Display
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
