--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -14,6 +14,7 @@ VERSION HISTORY:
 + PR #2048: Fixing Random Bloodname NPEs when Editing Personnel
 + PR #2050: Fixing Person Tech Unit Id Concurrent Modification Error
 + Issue #2024: Can Repeatedly Complete Missions by Cancelling Retirement Dialog
++ Issue #1971: Fixing Repair Bay Bonus Parts
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
