--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -16,6 +16,7 @@ VERSION HISTORY:
 + Issue #2024: Can Repeatedly Complete Missions by Cancelling Retirement Dialog
 + Issue #1971: Fixing Repair Bay Bonus Parts
 + PR #2054: Fixing Erroneous Newline after Unit Loading Failure
++ PR #2055: Swapping MekHQ to use the proper GUI to edit DropShip/JumpShip/WarShips
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
