--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -19,6 +19,7 @@ VERSION HISTORY:
 + PR #2055: Swapping MekHQ to use the proper GUI to edit DropShip/JumpShip/WarShips
 + PR #2060: Fix NPE when getSelectionPaths is null in TOEMouseAdapter
 + Issue #2059: Fixing Incorrect Campaign Operations Unit Rating Experience Calculation Method
++ PR #2063: Preventing null entities in AtBScenario
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
