--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -20,6 +20,7 @@ VERSION HISTORY:
 + PR #2060: Fix NPE when getSelectionPaths is null in TOEMouseAdapter
 + Issue #2059: Fixing Incorrect Campaign Operations Unit Rating Experience Calculation Method
 + PR #2063: Preventing null entities in AtBScenario
++ PR #2061: Add daily report entries for AtB scenarios
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
