--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -26,6 +26,7 @@ VERSION HISTORY:
 + Issue #1369: Unit Rating FM:M(r): Default Quality Value is no longer Elite
 + Issue #171: Manual Unit Rating Modifier
 + PR #2058: Implementing individual dice roll display in the GMTools Dialog
++ PR #2071: Fix campaign ops dropship maintenance costs
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
