--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -33,6 +33,7 @@ VERSION HISTORY:
 + PR #2073: MRMS Dialog Localization
 + PR #2075: Fixing Scenario Template Date NPEs
 + Issue #1986: Adding individual role filter and filtering by primary role options
++ PR #2076: Add Show BV Calculation to Unit context menu
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
