--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -34,7 +34,9 @@ VERSION HISTORY:
 + PR #2075: Fixing Scenario Template Date NPEs
 + Issue #1986: Adding individual role filter and filtering by primary role options
 + PR #2076: Add Show BV Calculation to Unit context menu
-+ Issue #1967 : Save part repair reservation if present
++ Issue #1967: Save part repair reservation if present
++ Issue #1953 Part 1: Fixing mothballing and activation tech restore
++ Issue #2079: Implementing Bulk Free in Personnel Tab
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
