--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -39,6 +39,7 @@ VERSION HISTORY:
 + Issue #2079: Implementing Bulk Free in Personnel Tab
 + Issues #1595/1805: Adding filters in Hangar Tab
 + Issue #1376: Hangar Tab Line Colours For Unmaintained and Uncrewed Units
++ Issue #2089: fix procuring vehicle engines from the parts store
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
