--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -44,6 +44,7 @@ VERSION HISTORY:
 + PR #2094: AtB Bot Camo Load Swapover
 + PR #2097: Finances credit/debit capitalization fixes
 + PR #2098: Personnel Table: Hide Assign to Unit
++ Issues #297/1248: Prisoner Capture Consolidation
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
