--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -45,6 +45,7 @@ VERSION HISTORY:
 + PR #2097: Finances credit/debit capitalization fixes
 + PR #2098: Personnel Table: Hide Assign to Unit
 + Issues #297/1248: Prisoner Capture Consolidation
++ PR #2088: explicitly track child parts
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
