--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -47,6 +47,7 @@ VERSION HISTORY:
 + Issues #297/1248: Prisoner Capture Consolidation
 + PR #2088: explicitly track child parts
 + PR #2096: Fixing Missing Unit Selector Unit Sprite in MekHQ
++ Issue #1525: Swapping to Minimum Crew instead of Maximum Crew
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
