--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -49,6 +49,7 @@ VERSION HISTORY:
 + PR #2096: Fixing Missing Unit Selector Unit Sprite in MekHQ
 + Issue #1525: Swapping to Minimum Crew instead of Maximum Crew
 + Issue #1875: Phenotype Bonus is properly added and reduced when editing your phenotype
++ PR #2101: Reduce the size of a Part's XML by ~30%
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
