--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -52,6 +52,7 @@ VERSION HISTORY:
 + PR #2101: Reduce the size of a Part's XML by ~30%
 + PR #2102: Reduce the size of a Unit's XML
 + PR #2077: Standardizing MRMS Options
++ PR #2052: Bloodname GM Tools
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
