--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -55,6 +55,7 @@ VERSION HISTORY:
 + PR #2052: Bloodname GM Tools
 + Issue #1079: Carrying out a refit no longer fixes shoulder/hip damage "for free"; legs with busted hips and center torsos no longer added to inventory after being removed from mech during refit
 + PR #2093: Loot Table: Fixing Money Capitalization and Adding Basic Unit/Part Tooltips
++ News data upgrade
 
 0.47.10 (2020-09-20 2100 UTC)
 + PR #1896: Campaign writeToXml: Fixing Output Spacing Issues
