--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -3,6 +3,7 @@ VERSION HISTORY:
 0.47.12-SNAPSHOT 
 + Issue #1970: Workaround for single hex ecm causing smallcraft to be overweight
 + Issue #1079: Add refit time for moving a part between locations
++ PR #2117: Fixing New Personnel Market Report
 
 0.47.11 (2020-10-04 2100 UTC)
 + Issue #2029: AmmoBin from warehouse can rarely come with free ammo
