--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -5,6 +5,8 @@ VERSION HISTORY:
 + Issue #1079: Add refit time for moving a part between locations
 + PR #2117: Fixing New Personnel Market Report
 + PR #2105: Avoid part ID references in Refits and elsewhere
++ Issue #2115: Fixing GM Tool Gender load
++ PR #2122: Fixing Scenario Date Compare
 
 0.47.11 (2020-10-04 2100 UTC)
 + Issue #2029: AmmoBin from warehouse can rarely come with free ammo
