--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -8,6 +8,7 @@ VERSION HISTORY:
 + Issue #2115: Fixing GM Tool Gender load
 + PR #2122: Fixing Scenario Date Compare
 + Issue #1265: Option to Subtract Salvage Overages from Final Contract Payment
++ PR #2128: Improve performance of searching for spare parts in large campaigns
 
 0.47.11 (2020-10-04 2100 UTC)
 + Issue #2029: AmmoBin from warehouse can rarely come with free ammo
