--- a/MekHQ/docs/history.txt
+++ b/MekHQ/docs/history.txt
@@ -13,6 +13,7 @@ VERSION HISTORY:
 + Issue #2118: Fixing MekHQ's use of MM password
 + Issue #2138: Fixing GM Mothballing
 + Issue #2139: Fixing Award Tracker Data Manipulation
++ Issue #2130: Fixing TOE “Deployed” and “Undeployed” Background Colour Display
 
 0.47.11 (2020-10-04 2100 UTC)
 + Issue #2029: AmmoBin from warehouse can rarely come with free ammo
